--- a/DiageoMDMWeb/src/main/webapp/perfil/datos/datosUsuario.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/perfil/datos/datosUsuario.xhtml
@@ -21,7 +21,9 @@
 
                         <h:outputLabel value="#{msg.usu_correo}" style="width: 25%"/>
                         <h:outputLabel value="#{misDatosBean.correo}" style="width: 75%"/>
-
+                        
+                        <h:outputLabel value="#{msg.usu_perfil}" style="width: 25%"/>
+                        <h:outputLabel value="#{misDatosBean.perfil}" style="width: 75%"/>
 
                         <h:outputLabel value="#{msg.usu_nombres}" style="width: 25%"/>
                         <h:panelGroup>
