--- a/DiageoMDMWeb/src/main/webapp/outlet/consultarOutlet.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/consultarOutlet.xhtml
@@ -1,10 +1,58 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./../WEB-INF/templates/diageoWebTemplate.xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
 
-    <ui:define name="content">
-        consultar establecimiento
-    </ui:define>
+    <h:body>
 
-</ui:composition>
+        <ui:composition template="./../WEB-INF/templates/diageoWebTemplate.xhtml">
+
+            <ui:define name="content">
+                <h:form id="formConsultarOutlet">
+                    <style>
+                        .ui-datatable-data .ui-widget-content{
+                            font-size: 80%;
+                        }
+                        .ui-datatable-table{
+                            font-size: 90%;
+                        }
+                    </style>
+                    <div style="left: 50%;-webkit-transform: translate(-50%);position: absolute;width: 90%">
+                        <p:dataTable id="dtOutlet" value="#{outletConsultarBean.listaOutlets}" var="outdt" paginatorAlwaysVisible="false" rows="15"
+                                     paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                     style="font-size:  90%">
+                            <p:column headerText="#{msg.out_razon_social}" filterBy="#{outdt.razonsocial}" filterMatchMode="startsWith">
+                                <h:outputLabel value="#{outdt.razonsocial}"/>
+                            </p:column>
+                            <p:column headerText="#{msg.out_nit}" filterBy="#{outdt.nit}" filterMatchMode="startsWith">
+                                <h:outputLabel value="#{outdt.nit}"/>
+                            </p:column>
+                            <p:column headerText="#{msg.out_nombre_propietario}" filterBy="#{outdt.propietario.nombres}" filterMatchMode="startsWith">
+                                <h:outputLabel value="#{outdt.propietario.nombres}"/>
+                            </p:column>
+                            <p:column headerText="#{msg.out_apellidos_propietario}" filterBy="#{outdt.propietario.apellidos}" filterMatchMode="startsWith">
+                                <h:outputLabel value="#{outdt.propietario.apellidos}"/>
+                            </p:column>
+                            <p:column headerText="#{msg.sub_seg_subsegmento}" filterBy="#{outdt.idsubsegmento.nomnbre}" filterMatchMode="startsWith">
+                                <h:outputLabel value="#{outdt.idsubsegmento.nomnbre}"/>
+                            </p:column>
+                            <p:column headerText="#{msg.out_potencial}" filterBy="#{outdt.idPotencial.nombre}" filterMatchMode="startsWith">
+                                <h:outputLabel value="#{outdt.idPotencial.nombre}"/>
+                            </p:column>
+                            <p:column headerText="#{msg.out_distribuidor}" filterBy="#{outdt.idDistribuidor.nombre}" filterMatchMode="startsWith">
+                                <h:outputLabel value="#{outdt.idDistribuidor.nombre}"/>
+                            </p:column>
+                            <p:column>
+                                <p:commandLink value="#{msg.btn_detalle}" style="color: blue"/>
+                            </p:column>
+                        </p:dataTable>
+                    </div>
+                </h:form>
+            </ui:define>
+
+        </ui:composition>
+
+    </h:body>
+</html>
