--- a/DiageoMDMWeb/src/main/webapp/admin/distribuidor/crearDistribuidor.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/distribuidor/crearDistribuidor.xhtml
@@ -5,24 +5,21 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui">
 
-    <h:body>
+    <body>
 
         <ui:composition template="./../../WEB-INF/templates/diageoWebTemplate.xhtml">
 
             <ui:define name="content">
-                <h:form id="formCanal">
+                <h:form id="formDistri">
                     <div style="left: 50%;-webkit-transform: translate(-50%);position: absolute;width: 100%">
-                        <h:panelGroup id="pgChaDetalle" style="width: 40%;left: 50%;-webkit-transform: translate(-50%);position: absolute">
+                        <h:panelGroup id="pgDistri" style="width: 40%;left: 50%;-webkit-transform: translate(-50%);position: absolute">
                             <h:panelGrid columns="2" style="width: 100%">
-                                <h:outputLabel value="#{msg.can_nombre}" style="width: 30%"/>
-                                <p:inputText id="itNombre" value="#{crearChannel.nombreChannel}" required="true" label="#{msg.can_nombre}" style="width: 70%"/>
-                                <h:outputLabel value="#{msg.estado}"/>
-                                <p:selectBooleanCheckbox label="#{msg.usu_activo}" value="#{crearChannel.estado}"/>
-                            </h:panelGrid> 
+                                <h:outputLabel value="#{msg.m_distri_nombre}" style="width: 30%"/>
+                                <p:inputText id="itNombre" required="true" label="#{msg.m_distri_nombre}" style="width: 70%"/>
+                            </h:panelGrid>
                             <br/>
                             <br/>
-                            <p:commandButton value="#{msg.btn_send}" process="@all" update="@form" 
-                                             actionListener="#{crearChannel.crearChannel()}"
+                            <p:commandButton value="#{msg.btn_send}" process="@all" update="@form"
                                              styleClass="button" style="width: 40%;left: 50%;-webkit-transform: translate(-50%)"/>
                             <br/>
                             <p:messages id="msg" closable="true" showDetail="true" showSummary="false" globalOnly="false" />
@@ -33,5 +30,5 @@
 
         </ui:composition>
 
-    </h:body>
+    </body>
 </html>
