--- a/DiageoMDMWeb/src/main/webapp/login.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/login.xhtml
@@ -23,7 +23,7 @@ and open the template in the editor.
                 <p:graphicImage id="giDiageo" value="/resources/images/logo/logoDiageoBlanco.png" width="50%"/>
                 <br/>
                 <br/>
-                <h:outputLabel value="MDM" style="color: white;font-size: 20px"/>
+                <h:outputLabel value="OUTLETDATABASE" style="color: white;font-size: 20px"/>
                 <br/>
                 <br/>
                 <h:panelGrid columns="1" width="100%">
@@ -51,8 +51,8 @@ and open the template in the editor.
                 <br/>
                 <h:panelGroup>
                     <h:panelGrid columns="2" style="left: 40%;position: fixed;text-align: center" width="20%">
-                        <h:commandLink value="Español" style="color: black" immediate="true" actionListener="#{diageoApplicationBean.changeLanguage('es')}"/>
-                        <h:commandLink value="English" style="color: black" immediate="true" actionListener="#{diageoApplicationBean.changeLanguage('en')}"/>
+                        <h:commandLink value="Español" style="color: black" immediate="true" actionListener="#{loginBean.changeLanguage('es')}"/>
+                        <h:commandLink value="English" style="color: black" immediate="true" actionListener="#{loginBean.changeLanguage('en')}"/>
                     </h:panelGrid>
                 </h:panelGroup>
             </div>            
